--- a/p/themes/Flat/flat.css
+++ b/p/themes/Flat/flat.css
@@ -859,7 +859,6 @@ a.btn {
 .stat > table td,
 .stat > table th {
 	border-bottom: 1px solid #ddd;
-	text-align: center;
 }
 
 /*=== LOGS */
