--- a/p/themes/Screwdriver/screwdriver.css
+++ b/p/themes/Screwdriver/screwdriver.css
@@ -1025,7 +1025,6 @@ opacity: 1;
 	border-bottom: 1px solid #ccc;
 	background: rgba(255,255,255,0.38);
 	box-shadow: 0 1px #fff;
-	text-align: center;
 }
 
 /*=== LOGS */
